--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
            <a href="index.html">Home</a>
           <li class="nav-li">
            <a href="portfolio.html">Portfolio</a>
+           <a href="images.html">Image Gallery</a>
           </li>
           </li>
         </ul>
